ci: bump js dependencies (#7173)
* bump grunt-eslint to 26

* auto generate new config

* add new deps

* eol

* working

* bump everything

* lint

* remove legacy config file

* reenable function-no-unknown

* remove gruntfile

* clean up config

* update remaining deps

* update playwright docker image while at it

* fix indent

--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install modules
         run: npm install
       - name: Run lint check
-        run: npm run test
+        run: npm run lint:ci
       - name: Run unit test
         run: npm run test:js
       - name: Report test
