--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"eslint": "9.x.x",
 		"eslint-config-wikimedia": "0.32.3",
 		"eslint-plugin-jsdoc": "^62.6.0",
-		"eslint-plugin-vue": "10.x.x",
+		"eslint-plugin-vue": "10.6.x",
 		"globals": "^17.3.0",
 		"jest": "^30.2.0",
 		"jest-environment-jsdom": "^30.2.0",
@@ -32,8 +32,8 @@
 		]
 	},
 	"scripts": {
-		"lint": "npm run lint:js & npm run lint:scss",
-		"lint:ci": "npm run lint:js & npm run lint:scss:ci",
+		"lint": "npm run lint:js && npm run lint:scss",
+		"lint:ci": "npm run lint:js && npm run lint:scss:ci",
 		"lint:js": "eslint --fix",
 		"lint:scss": "stylelint \"stylesheets/**/*.scss\"",
 		"lint:scss:ci": "stylelint \"stylesheets/**/*.scss\" --custom-formatter @csstools/stylelint-formatter-github",
